<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout_steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Content View -->
    <FrameLayout
        android:id="@+id/recipe_steps_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.erugbycoach.halfbaked.UI.RecipeDetails">

    </FrameLayout>

    <!-- navigation Drawer Container -->
    <ListView android:id="@+id/left_drawer_steps"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFF"/>

</android.support.v4.widget.DrawerLayout>